--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" id="WebApp_ID" version="4.0">
   <servlet>
+    <servlet-name>home</servlet-name>
+    <servlet-class>com.jh.control.HomeController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>home</servlet-name>
+    <url-pattern>/index.do</url-pattern>
+  </servlet-mapping>
+  <servlet>
     <servlet-name>notice</servlet-name>
     <servlet-class>com.jh.control.NoticeController</servlet-class>
   </servlet>
@@ -8,13 +16,12 @@
     <servlet-name>notice</servlet-name>
     <url-pattern>/notice/*</url-pattern>
   </servlet-mapping>
-  
   <servlet>
-  	<servlet-name>home</servlet-name>
-  	<servlet-class>com.jh.control.HomeController</servlet-class>
+    <servlet-name>member</servlet-name>
+    <servlet-class>com.jh.control.MemberController</servlet-class>
   </servlet>
   <servlet-mapping>
-  	<servlet-name>home</servlet-name>
-  	<url-pattern>/index.do</url-pattern>
+    <servlet-name>member</servlet-name>
+    <url-pattern>/member/*</url-pattern>
   </servlet-mapping>
 </web-app>
